[package]
name = "rust-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.25", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
aws-config = "0.56.1"
aws-sdk-cognitoidentityprovider = "0.30.0"
